# hyperpush

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  QUEUE-ORDER.json  REQUIREMENTS.md  doctor-history.jsonl  event-log.jsonl  gsd.db-shm  gsd.db-wal  state-manifest.json
.gsd/journal/: 2026-03-23.jsonl  2026-03-24.jsonl  2026-03-25.jsonl
.planning/: PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.tmp/m034-s01-research-build/: build-flat.stderr  build.stderr  install.json  main.mpl  mesh.toml
.tmp/m034-s01-research-install/: install.json  mesh.toml
articles/: ARTICLE_3.md
benchmarks/: METHODOLOGY.md  RESULTS.md
benchmarks/fly/: Dockerfile.loadgen  Dockerfile.servers  run-benchmarks-isolated.sh  run-benchmarks.sh  start-servers.sh
benchmarks/mesh/: bench.mpl
compiler/mesh-lsp/: Cargo.toml
compiler/mesh-pkg/: Cargo.toml
compiler/mesh-rt/: Cargo.toml
compiler/meshpkg/: Cargo.toml
compiler/meshpkg/src/: auth.rs  install.rs  main.rs  publish.rs  search.rs
mesh-slug/: main.mpl  slug.mpl
mesh-slug/tests/: slug.test.mpl
mesher/: main.mpl
mesher/client/: package-lock.json  package.json
mesher/frontend-exp/: Dockerfile  README.md
mesher/ingestion/: fingerprint.mpl  pipeline.mpl  routes.mpl  validation.mpl
mesher/services/: retention.mpl  stream_manager.mpl  user.mpl  writer.mpl
packages-website/: Dockerfile
reference-backend/: README.md  main.mpl
registry/: .dockerignore  Dockerfile  fly.toml
scripts/: verify-m032-s01.sh  verify-m034-s01.sh  verify-m034-s04-workflows.sh  verify-m047-s04.sh  verify-m047-s05.sh  verify-m047-s06.sh  verify-m053-s01.sh
website/: package.json
(+488 files in other folders)
