[workspace]
members = [
    "compiler/mesh-common",
    "compiler/mesh-lexer",
    "compiler/mesh-parser",
    "compiler/mesh-typeck",
    "compiler/mesh-rt",
    "compiler/mesh-codegen",
    "compiler/meshc",
    "compiler/mesh-pkg",
    "compiler/mesh-lsp",
    "compiler/mesh-fmt",
    "compiler/mesh-repl",
    "compiler/meshpkg",
]
resolver = "2"

[workspace.dependencies]
insta = { version = "1.46", features = ["yaml"] }
rowan = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ena = "0.14"
rustc-hash = "2"
ariadne = "0.6"
inkwell = { version = "0.8.0", default-features = false, features = ["llvm21-1", "target-x86", "target-aarch64", "target-arm"] }
clap = { version = "4.5", features = ["derive"] }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
git2 = "0.19"
semver = "1"
rustyline = "15"
mimalloc = { version = "0.1", default-features = false }
tar = "0.4"
flate2 = "1"
indicatif = "0.17"
colored = "2"
dirs = "5"
ureq = { version = "3", features = ["gzip"] }
sha2 = "0.10"
