[package]
name = "meshpkg"
version = "0.1.0"
edition = "2021"
description = "Mesh package manager CLI"

[[bin]]
name = "meshpkg"
path = "src/main.rs"

[dependencies]
mesh-pkg = { path = "../mesh-pkg" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
